src/styles/global.css
@import "./reset.css";
@import "./variables.css";

body {
  margin: 0 auto;
  .container {
    background-color: var(--white);
    padding-top: 55px;
    padding-bottom: 74px;
    height: calc(100vh - 55px - 74px);
    overflow: auto;
  }
}

/* 모바일 */
@media (max-width: 430px) {
  body {
    width: 100%;
  }
}

/* 태블릿 */
@media (min-width: 431px) and (max-width: 640px) {
  body {
    width: 100%;
    background-color: var(--light-gray);
  }
}

/* 데스크탑 */
@media (min-width: 641px) {
  body {
    max-width: 640px;
    background-color: var(--light-gray);
  }
}

